--- a/joshuto/keymap.toml
+++ b/joshuto/keymap.toml
@@ -12,7 +12,7 @@ keymap = [
   { keys = ["ctrl+z"], commands = ["suspend"] },
   { keys = ["Q"], commands = ["quit --output-current-directory"] },
 
-  { keys = ["R"], commands = ["reload_dirlist"] },
+  # { keys = ["R"], commands = ["reload_dirlist"] },
   { keys = ["z", "h"], commands = ["toggle_hidden"] },
   { keys = ["ctrl+h"], commands = ["toggle_hidden"] },
   { keys = ["\t"], commands = ["tab_switch 1"] },
@@ -85,8 +85,10 @@ keymap = [
   { keys = ["p", "p"], commands = ["paste_files"] },
   { keys = ["p", "o"], commands = ["paste_files --overwrite=true"] },
 
-  { keys = ["a"], commands = ["rename_append"] },
-  { keys = ["A"], commands = ["rename_prepend"] },
+  # { keys = ["a"], commands = ["rename_append"] },
+  # { keys = ["A"], commands = ["rename_prepend"] },
+  { keys = ["r"], commands = ["rename_append"] },
+  { keys = ["R"], commands = ["rename_prepend"] },
 
   { keys = ["f", "t"], commands = [":touch "] },
 
