--- a/joshuto/keymap.toml
+++ b/joshuto/keymap.toml
@@ -89,6 +89,8 @@ keymap = [
   # { keys = ["A"], commands = ["rename_prepend"] },
   { keys = ["r"], commands = ["rename_append"] },
   { keys = ["R"], commands = ["rename_prepend"] },
+  { keys = ["ctrl+g"], commands = ["shell lazygit"] },
+
 
   { keys = ["f", "t"], commands = [":touch "] },
 
