--- a/joshuto/joshuto.toml
+++ b/joshuto/joshuto.toml
@@ -20,9 +20,9 @@ collapse_preview = true
 # ratios for parent view (optional), current view and preview
 column_ratio = [1,4,4]
 scroll_offset = 6
-show_borders = true
+show_borders = false
 show_hidden = false
-show_icons = false
+show_icons = true
 # none, absolute, relative
 line_number_style = "none"
 
